--- a/GerenciadorEventos/Web.config
+++ b/GerenciadorEventos/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GerenciadorEventos-20160531021823.mdf;Initial Catalog=aspnet-GerenciadorEventos-20160531021823;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="gerenciadordeeventos" connectionString="Database=gerenciadoreventos; Data Source=localhost;User Id=root;Password=" providerName="MySql.Data.MySqlClient" />
-    <!--<add name="gerenciadordeeventos" providerName="MySql.Data.MySqlClient" connectionString="Database=gerenciadordeeventos;Data Source=br-cdbr-azure-south-b.cloudapp.net;User Id=b72949ad0b828b;Password=bbaafcc8" />-->
+    <!--<add name="gerenciadordeeventos" connectionString="Database=gerenciadoreventos; Data Source=localhost;User Id=root;Password=" providerName="MySql.Data.MySqlClient" />-->
+    <add name="gerenciadordeeventos" providerName="MySql.Data.MySqlClient" connectionString="Database=gerenciadordeeventos;Data Source=br-cdbr-azure-south-b.cloudapp.net;User Id=b72949ad0b828b;Password=bbaafcc8" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -33,7 +33,7 @@
   <system.net>
     <mailSettings>
         <smtp deliveryMethod="Network">
-            <network defaultCredentials="false" enableSsl="true" host="smtp.gmail.com" port="587" userName="jhonatanrc13@gmail.com" password="97fy5j2W40nm#@"/>
+            <network defaultCredentials="false" enableSsl="true" host="smtp.gmail.com" port="587" userName="gerenciadoreventospuc@gmail.com" password="375i4u9E"/>
         </smtp>
     </mailSettings>
 </system.net>
